[FEATURE]: UI - Program status on schedule. Sending notifications on schedule changes